@@ -1,5 +1,5 @@
 TinyMUX 2.3:  CHANGES
-Last Update:  May 2003
+Last Update:  July 2003
 
 Major changes that may affect performance and require softcode tweaks:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -146,6 +146,17 @@ Bug Fixes:
  -- Fix to new PCRE code to avoid error in gcc 2.95.
  -- Support obj(name(<dbref>)) where name(<dbref>) contains ANSI color.
     Reported by Bellemore.
+ -- @addcommand wasn't initializing @hook command information properly.
+    On non-debug builds, this would tend to leave the command in a
+    @hook/ignore state.  Therefore, even though the @addcommand was
+    successful, a user would still receive a 'Huh?' message.
+ -- Specific to the Win32 build with the Intel Compiler,
+    'mul(288,power(10,9))' --> '287:00000000' instead of '288000000000'.
+    It transformed a floating-point division in mux_dtoa() into a
+    floating-point multiplication (tangentially, using MMX instructions
+    as well).  The -Qprec_div option prevents this optimization and fixes
+    the behavior.  As insurance, some additional code also will fix the
+    the problem.
 
 
 Performance Enhancements:
